tests/paczka1/small_fuzzy/32266798.err
Error in line 3: ADLldClOL S549 68,3
Error in line 8: 6gg4 S508 -3,5
Error in line 13: xPtNXVW A60K 7,6
Error in line 10: xPtNXVW A605 6,4
Error in line 6: A605 S157 47,3
